--- a/public/main.css
+++ b/public/main.css
@@ -8,7 +8,7 @@ body {
 
 }
 
-#container{
+.container{
 
     width: 70vw;
     height: auto;
@@ -20,7 +20,7 @@ body {
 
 }
 
-#cartLink{
+.cartLink{
 
     text-decoration: none;
     font-size: 20px;
@@ -32,16 +32,15 @@ body {
     background-color: purple; 
   
 }
-#cartLink:hover{
-
+.cartLink:hover{
     color: purple;
     background-color: goldenrod;
 }
-#cartWrapper{
+.cartWrapper{
     margin-top:15px;
 }
 
-#login{
+.login{
     text-decoration: none;
     font-size: 20px;
     font-weight: 700;
@@ -51,11 +50,11 @@ body {
     border-radius: 10px;
     background-color: purple;
 }
-#login:hover{
+.login:hover{
     color: purple;
     background-color: goldenrod;
 }
-#loginWrapper{
+.loginWrapper{
     margin-top:10px;
 }
 
@@ -63,7 +62,7 @@ body {
     color: red;
 }
 
-#productsBtn{
+.productsBtn{
     margin-top: 20px;
 }
 
